--- a/docfx_project/site/manifest.json
+++ b/docfx_project/site/manifest.json
@@ -720,7 +720,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/environment-basic-operations.html",
-          "hash": "ByPhrJnzWtAi1c+DHFV0wQ=="
+          "hash": "Qo2V5W0PlxQu+11GEr/wKQ=="
         }
       },
       "is_incremental": false,
@@ -732,7 +732,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/environment-creation-in-paas.html",
-          "hash": "+A4H+l/6/r5Z8jAx3zOHSA=="
+          "hash": "zuqd7yYjkEaSeXP2Qzi3jw=="
         }
       },
       "is_incremental": false,
@@ -5212,11 +5212,11 @@
     },
     {
       "type": "Conceptual",
-      "source_relative_path": "home/techguides/make-updates-cloud.md",
+      "source_relative_path": "home/techguides/manage-environments.md",
       "output": {
         ".html": {
-          "relative_path": "home/techguides/make-updates-cloud.html",
-          "hash": "lcDg8wJKzK2Q5gv8GZqZJA=="
+          "relative_path": "home/techguides/manage-environments.html",
+          "hash": "ZO0ZF5baKSsiG63TZIuqDQ=="
         }
       },
       "is_incremental": false,
@@ -5357,22 +5357,31 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/use-gitlab-repository.html",
-          "hash": "tgfKkATnOm6tFlm4d5MHtg=="
+          "hash": "SNl9HBNuENlxecYsdXbzQA=="
         }
       },
       "is_incremental": false,
       "version": ""
     },
     {
-      "log_codes": [
-        "InvalidFileLink"
-      ],
       "type": "Conceptual",
       "source_relative_path": "home/techguides/user-creation-in-paas.md",
       "output": {
         ".html": {
           "relative_path": "home/techguides/user-creation-in-paas.html",
-          "hash": "TnZgJ/6e5lVXk7+rySAJSQ=="
+          "hash": "artWAXhajzhIrlCOQx2WFw=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "home/techguides/user-permissions.md",
+      "output": {
+        ".html": {
+          "relative_path": "home/techguides/user-permissions.html",
+          "hash": "uTzYAwzSXHONYXq88OBhvg=="
         }
       },
       "is_incremental": false,
@@ -5408,7 +5417,7 @@
       "output": {
         ".html": {
           "relative_path": "home/toc.html",
-          "hash": "mJ+O5vbRPLxoKXOehxK82g=="
+          "hash": "QwFmQM6BrcbuqNc9Xg98hA=="
         }
       },
       "is_incremental": false,
@@ -5560,9 +5569,9 @@
         "incrementalPhase": "build"
       },
       "processors": {
-        "ResourceDocumentProcessor": {
+        "RestApiDocumentProcessor": {
           "can_incremental": false,
-          "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "details": "Processor RestApiDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
         "ManagedReferenceDocumentProcessor": {
@@ -5573,9 +5582,9 @@
           "can_incremental": true,
           "incrementalPhase": "build"
         },
-        "RestApiDocumentProcessor": {
+        "ResourceDocumentProcessor": {
           "can_incremental": false,
-          "details": "Processor RestApiDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
         "TocDocumentProcessor": {
