--- a/manifest.json
+++ b/manifest.json
@@ -38,18 +38,6 @@
     },
     {
       "type": "Conceptual",
-      "source_relative_path": "home/add-features-to-environment-video.md",
-      "output": {
-        ".html": {
-          "relative_path": "home/add-features-to-environment-video.html",
-          "hash": "aq88hLSE5Rr+gWp2U//e5g=="
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
       "source_relative_path": "home/architecture.md",
       "output": {
         ".html": {
@@ -122,6 +110,18 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "home/deploy-features-to--an-environment-video.md",
+      "output": {
+        ".html": {
+          "relative_path": "home/deploy-features-to--an-environment-video.html",
+          "hash": "ZtnUgFu7874Dh3MeAFq6Fg=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "home/design-studio-tutorials.md",
       "output": {
         ".html": {
@@ -174,7 +174,7 @@
       "output": {
         ".html": {
           "relative_path": "home/faq.html",
-          "hash": "wec/FelG0eMQMmkq8YRGMQ=="
+          "hash": "3b4cZkYNaa+Tb6vmg5+rTQ=="
         }
       },
       "is_incremental": false,
@@ -441,6 +441,66 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "home/manage-components-products-video.md",
+      "output": {
+        ".html": {
+          "relative_path": "home/manage-components-products-video.html",
+          "hash": "jecd0lZjSurJ6++UQRY+oQ=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "home/manage-factories-video.md",
+      "output": {
+        ".html": {
+          "relative_path": "home/manage-factories-video.html",
+          "hash": "fapJO0veeVOnr8VU4K64Kw=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "home/manage-stages-video.md",
+      "output": {
+        ".html": {
+          "relative_path": "home/manage-stages-video.html",
+          "hash": "j/J2fUu2x1LIjwUXTQn0KA=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "home/manage-streams-video.md",
+      "output": {
+        ".html": {
+          "relative_path": "home/manage-streams-video.html",
+          "hash": "sLFMvpSzWJeY7mJgb4FHKQ=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "home/manage-testcases-video.md",
+      "output": {
+        ".html": {
+          "relative_path": "home/manage-testcases-video.html",
+          "hash": "ZiZZS40VqsIXFvWqMsSjlw=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "home/overview.md",
       "output": {
         ".html": {
@@ -509,66 +569,6 @@
     },
     {
       "type": "Conceptual",
-      "source_relative_path": "home/setup-components-products-video.md",
-      "output": {
-        ".html": {
-          "relative_path": "home/setup-components-products-video.html",
-          "hash": "gRjFFIcBZtuKR9pdA6Crtg=="
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "home/setup-factories-video.md",
-      "output": {
-        ".html": {
-          "relative_path": "home/setup-factories-video.html",
-          "hash": "HoGTd3ZhkZ1dq+hSzyEY8Q=="
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "home/setup-stages-video.md",
-      "output": {
-        ".html": {
-          "relative_path": "home/setup-stages-video.html",
-          "hash": "HkmEySMRcvYStsmFXEuX+w=="
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "home/setup-streams-video.md",
-      "output": {
-        ".html": {
-          "relative_path": "home/setup-streams-video.html",
-          "hash": "Jtm/aTwv1Q39uRllICtPug=="
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "home/setup-testcases-video.md",
-      "output": {
-        ".html": {
-          "relative_path": "home/setup-testcases-video.html",
-          "hash": "NQEvQLW37MFpemGszcjy4A=="
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
       "source_relative_path": "home/support.md",
       "output": {
         ".html": {
@@ -597,7 +597,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/access-ud-directories.html",
-          "hash": "GrX0ySHycM96sK/fX7Yn9w=="
+          "hash": "stpvGN8WNNQAAbhfcG3cLg=="
         }
       },
       "is_incremental": false,
@@ -768,7 +768,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/fcm-configuration.html",
-          "hash": "3mrlsayYF+QaD8GxSZhCdQ=="
+          "hash": "y8k3D4z5Y1jndbHLi4mz0w=="
         }
       },
       "is_incremental": false,
@@ -5089,6 +5089,17 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "home/techguides/images/use-git-repo-fcm.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/use-git-repo-fcm.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "home/techguides/images/use-git-repo.png",
       "output": {
         "resource": {
@@ -5381,7 +5392,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/use-gitlab-repository.html",
-          "hash": "pQWZg3P+DpoiEKHG6BxyyA=="
+          "hash": "bXzUTruw9PnN4WghfGvXxw=="
         }
       },
       "is_incremental": false,
@@ -5393,7 +5404,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/user-creation-in-paas.html",
-          "hash": "rdQ4wwQt8zf/e3wVO0hg6w=="
+          "hash": "EqHy/p8wuRiTM6mQb/ndfw=="
         }
       },
       "is_incremental": false,
@@ -5448,12 +5459,15 @@
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Toc",
       "source_relative_path": "home/toc.yml",
       "output": {
         ".html": {
           "relative_path": "home/toc.html",
-          "hash": "QwFmQM6BrcbuqNc9Xg98hA=="
+          "hash": "RIXHIqcOyNqZ2LdwV7s01Q=="
         }
       },
       "is_incremental": false,
@@ -5606,14 +5620,14 @@
         "incrementalPhase": "build"
       },
       "processors": {
-        "ResourceDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
-          "incrementalPhase": "build"
-        },
         "TocDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
+        "ResourceDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
         "RestApiDocumentProcessor": {
